Use direct to string methods instead of string value of